# ldapvi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
integration-test/: Cargo.toml  Dockerfile.389ds  Dockerfile.slapd  README.md
integration-test/src/: lib.rs
integration-test/tests/: smoke.rs
ldapvi/: Cargo.toml  GNUmakefile.in  NEWS  arguments.c  base64.c  common.h  configure.in  data.c  diff.c  error.c  interactive.c  ldapvi.1  ldapvi.1.in  ldapvi.c  misc.c  parse.c  parseldif.c  port.c  print.c  sasl.c  schema.c  search.c  test_arguments.c  test_data.c  test_diff.c  test_harness.h  test_interactive.c  test_main.c  test_parse.c  test_parseldif.c  test_print.c  test_schema.c  test_search.c  test_search_stubs.c  test_stubs.c  version.h
ldapvi/manual/: manual.xml
ldapvi/src/: app.rs  arguments.rs  base64.rs  data.rs  diff.rs  error.rs  interactive.rs  ldap.rs  lib.rs  main.rs  noninteractive.rs  parse.rs  parseldif.rs  port.rs  print.rs  schema.rs  test_main.rs
popt/: COPYING  Cargo.toml  MIGRATION.md  README  testit.sh
popt/src/: lib.rs
web/: ldapvi.xml
